[gd_scene load_steps=5 format=3 uid="uid://tw0hsqml6e1y"]

[ext_resource type="Script" uid="uid://bm3ypst306flb" path="res://world/ResourceNode.gd" id="1_tca2k"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tca2k"]
properties/0/path = NodePath(".:is_depleted")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:current_node_health")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_i3eeo"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_tca2k"]
radius = 13.0384

[node name="ResourceNode" type="Node2D"]
script = ExtResource("1_tca2k")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tca2k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_i3eeo")

[node name="InteractionArea" type="Area2D" parent="." groups=["resource_node_interaction_zone"]]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_tca2k")

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true
